# format-fusion-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  scripts.py
.github/workflows/: CI.yml  lint.yml  test.yml
convert_master/: converting.py  helpers.py  main.py
convert_master/commands/: __init__.py  cmd_image.py  cmd_yaml.py
formatfusion/: __main__.py  converter.py  converting.py  helpers.py  main.py
formatfusion/commands/: __init__.py  cmd_image.py  cmd_yaml.py
formatfusion/core/: base.py  image.py  json_and_yaml.py
formatfusion/models/: __init__.py  file_converter_model.py
tests/: test_cmd_image.py  test_cmd_yaml.py  test_converting.py  test_helpers.py
tests/test_core/: test_image.py  test_json_and_yaml.py
