[tool.poetry]
name = "cli-format-fusion"
version = "0.1.0"
description = "A mini conversion tool"
authors = ["R00kie <driftworks2013@yandex.ru>"]
packages = [
    { include = "formatfusion"},
]
readme = "README.md"

[tool.poetry.urls]
Homepage = "https://github.com/Nottezz/format-fusion-cli"
Issues = "https://github.com/Nottezz/format-fusion-cli/issues"

[tool.poetry.scripts]
format-fusion = "formatfusion.__main__:__main__"
lint = "scripts:lint"
format = "scripts:format"
test = "scripts:test"

[tool.poetry.dependencies]
python = "^3.11.0"
pyyaml = "^6.0.2"
docopt = "^0.6.2"
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
black = "22.12.0"
isort = "5.11.5"
mypy = "1.11.2"
coverage = "^7.6.10"
types-docopt = "^0.6.11.20241107"
types-pyyaml = "^6.0.12.20241230"

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
disable_error_code = "annotation-unchecked"
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
namespace_packages = true
